The source text for new article splitted into chunks

--- a/2022-02-17-distraction-epidemy.org
+++ b/2022-02-17-distraction-epidemy.org
@@ -18,8 +18,180 @@ tags: [attention, distraction]
 
 
 * Intro
+
+All right.  So life is kinda hard these days for lots of reasons, but
+one of them is that we live in an epidemic of distraction.  We're
+always surrounded by fancy technology, firms that ping us every five
+seconds, and a world of games and TV shows at our fingertips.  There's
+absolutely nothing wrong with this stuff, but it becomes a problem
+when it's distracting us from the things that we actually want to do.
+And there's probably three reasons why we get distracted from the
+stuff that actually matters to us.  Number one is that it's just too
+boring.  We're trying to do something important, but it's just really
+not fun, and so we're gonna get distracted by anything that comes our
+way.  Number two, the thing we're trying to do is just too hard.
+We're working on something important, but we've hit a roadblock, we
+can't figure out what to write next or where the missing semi-colon is
+that stopping the code from working, or get our fingers to do what we
+want them to do while playing the guitar, as soon as a distraction
+comes our way we rejoice.  And number three, the distraction is just
+too prominent.  Most of us work with our phones at our desk and a
+laptop sending us notifications for every little thing.  Even with the
+best of intentions, it's genuinely hard to stay focused when we're
+being bombarded by these distractions all the time.  So now that we
+know the enemy, let's figure out ways that we can fight these
+distractions so that they don't stop us from doing the things that
+actually matter to us.
+
 * Embrace welcome distractions
+
+Tip number one is somewhat counter-intuitive, but that is to embrace
+welcome distractions.  Now, I draw the distinction here between
+welcome and unwelcome distractions.  An unwelcome distraction is like
+a notification from Instagram that someone has, I don't know, liked my
+post or something that's really not adding any real value to my life,
+and if I click on it, I'm just gonna end up doom scrolling through
+Instagram.  That would be an unwelcome distraction, but a welcome
+distraction is something that I actually want to be distracting me.
+And so what I mean is, for example, when I was at university studying
+for my medical exams, I would be studying in my room, but then I would
+leave my door open and I would have a doorstop wedged my door open at
+all times, because I would welcome the distraction from my friends and
+from my med school colleagues, and they'd come in and have a little
+bit of a chat.  Now, the yes, those were distractions, but they were
+welcome distractions like, under the point of university, yes was to
+pass the exam, but the bigger point of university was to make friends
+and to have a nice time and all that kind of stuff.  And if I'd been
+distracted by a friend, maybe I would get like 0.002% less on the
+exam, but given that that work was not gonna be the thing that makes
+me fail the exam, I would rather be distracted by my friends or by my
+family or in the future, hopefully if I'm working from home and I have
+kids, I would enjoy, I would welcome being distracted by the kids
+'cause that's kinda the point.  And the way I think about it is that,
+when I'm on my death bed in a few years time, will I wish I had worked
+harder and been more focused or will I wish that I had spent more time
+being distracted by friends and family?  I don't know.
+
 * Optimize for enjoyment
+
+Tip number two for combating distractions is to optimise for
+enjoyment.  So you know how we talked about one of the main reasons
+why we get distracted is because the thing that we are being
+distracted from is just too boring.  What we wanna do is try and make
+the thing a lot more fun.  Like we almost never get distracted if
+we're having a great time watching a great film or TV show or playing
+a video game or hanging out with our friends, or doing something
+that's genuinely fun.  Like it's very difficult to get distracted from
+that.  We tend to get distracted from the things that are boring or
+the things that are hard.  And so, if we focus on optimising for fun,
+then we can reduce the risks of us being distracted from the thing.
+And there's loads of ways to make whatever we're doing more fun.  One
+of my favourite ones involves charting progress.  So, one of the
+reasons why games, like video games are fun, is because you get a very
+clear sense of progress.  You kill the animal, the beast, the bore,
+whatever, like in a non mean way, and you're experienced ball goes up,
+and then you level up and then you get more skills.  And so, applying
+this concept of gamifying stuff to whatever we're trying to do, just
+genuinely makes it more fun.  So for example, if you're studying for
+an exam, like treating it as a points tally, or like a score or like a
+traffic light system, I've got more details in my retrospective
+revision timetable video, which will be somewhere over there.  If
+you're trying to make progress in learning how to code or starting a
+business or whatever, then you give yourself milestones, like little
+milestones that you can then take off.  And that leads to that sort of
+dopamine release of, yes, I've accomplished something, and that makes
+us feel like the thing that we're doing is more fun because it
+actually does become more fun by the fact that we're charting our
+progress through it.  Yeah, a bunch of other stuff, it's all gonna be
+in the book.  I'm researching all this stuff these days, but sign up
+to the mailing list to find out more as details come up.
+
 * Throw away the phone
+
+Tip number three is to basically throw away the phone.  Like, even if
+we're having fun and the phone is bombarding us with notifications,
+oh, like on Hinge or like on Tinder or that kind of stuff, it's
+generally very hard to stay focused, even if we're like super focused
+and in the flow and having a great time.  What I normally do, if I'm
+really struggling with a phone, I just chuck it behind me onto the
+sofa or whatever.  More often than not what I do, I'll just have it
+face down and on aeroplane mode.  So, yeah, if it's an aeroplane mode,
+it's not gonna ping, and if it's face down, that I'm not even gonna
+see the screen.  And then when I'm taking my breaks, I'll pick it up,
+take it off aeroplane mode and then be like, oh, hello, lots of
+notifications.  Ignore all of them, put it back down and start kind of
+doing the thing that actually matters to me.
+
 * Control your environment
+
+Tip number four is to control your environment.  Now, like at the
+moment, my desk is pretty messy, and it's very easy to get distracted
+when there is a messy desk with a lot of stuff going on, because, as
+soon as the thing that I'm doing becomes boring or becomes
+challenging, I can be like, oh, I wonder what this lens is doing on my
+desk, or, I'll play with my deck of cards a little bit, or I'll open
+that box that I haven't unboxed yet.  And like the more crap that I
+have on my desk, the more likely I am to get distracted.  And so, an
+easy tip for not getting distracted is just to have a clean desk.
+This is actually not very hard.  I personally find it very hard to
+maintain a clean desk, which is why I've, a few months ago, signed up
+to a WeWork coworking space in Cambridge, link and video description,
+if you wanna check it out, it's really good.  So I go there basically
+every day, and it helps keep me focused, because then I'm sitting at a
+table with only my laptop and my AirPods, and I have nothing on the
+desk to distract me, whereas I get distracted all the time when I'm at
+home.  And so, going to a library, going to a coffee shop, going to a
+co-working space, going somewhere outside of your own environment,
+where you're less likely to get distracted because there's no stuff
+all around you.  That is often, at least I find for me, a really good
+way of combating distraction.  Now, as a quick aside, do you know how
+we talked about that, If a thing is fun, you're less likely to be
+distracted while doing it.  One app that takes us to a whole new level
+is Brilliant, who are very kindly sponsoring this video.  If you
+haven't heard by now, Brilliant is a fantastic platform with online
+courses in math, science and computer science, and they're genuinely
+really fun and interactive, and they teach stuff to you in a very
+engaging first principled kind of way, where it has just the right
+amount of challenge and just the right amount of fun that is genuinely
+like it's hard to be distracted when you're doing an online course at
+Brilliant.  My favourite courses on Brilliant are the computer science
+ones, and if you're interested in learning how to code, they've got a
+fantastic introduction to algorithms and introduction to Python.  And
+they've recently released a brand new course on scientific thinking,
+which is all about how we can solve interactive puzzles using science,
+which is A, fun and B, helps level up our brains.  If that's on the
+pure street and you want a genuinely enjoyable learning experience
+then head over to brilliant.org/Ali, and the first 200 people to use
+that link will get 20% off the annual premium subscription.  So thank
+you so much Brilliant for sponsoring this video.
+
 * Deliberately manage your time
+
+And finally, tip number five is to deliberately manage your time.
+Now, there is a book called "Indistractable" by Chap Gordon and Nir
+Eyal.  And then in that, he's done all the research around what makes
+things distracting.  And he says that, often you can tell by looking
+at someone's calendar, how prone to distraction they are.  Because,
+like, if your calendar, let's say it's 11:00 a.m.  and you feel like
+you're getting distracted, and you look at your calendar and there's
+nothing in the 11:00 a.m. slot, then you have nothing to do in that
+time slot, and therefore you have nothing to be distracted from, if
+that makes sense.  And so it's very easy to like pick up the phone or
+pick up the PlayStation or whatever, because we don't have a default
+action that we're gonna be doing in that time.  And so what Nir Eyal
+says, and what I completely agree with is that, if you time block the
+things that you actually want to do earlier in the day...  So the
+first thing I do each morning is I set my daily highlight, which is
+the one thing I wanna get done today, and then I make sure I stick in
+my calendar exactly when I'm gonna do that thing, so that when it
+comes to the time of doing the thing, I know what it is I have to do,
+and therefore I'm actually less likely to get distracted from it
+because I know what I have to do.  Whereas, it's when I have a big
+to-do list, and I don't know what to start with, or I don't have
+clarity, or it just feels a bit vague, like I don't know where to get
+started, that is when it becomes super easy to just get distracted by
+picking up the phone or turning on Netflix.  If you found this video
+useful, and you're interested in more tips for time management, check
+out this video over here, which is 10 other tips on how I manage my
+time.  Thank you so much for watching.  Do hit the subscribe button if
+you aren't already, and I'll see you in the next video.  Bye-bye.
