--- a/2022-02-03-intelligence-amplification.org
+++ b/2022-02-03-intelligence-amplification.org
@@ -26,6 +26,11 @@ in augmenting human intelligence.
 #+end_verse
 #+end_quote
 
+* Ross Ashby's Aphorisms                                       :quotes:Ashby:
+:PROPERTIES:
+:CATEGORY: Ashby's Aphorisms
+:END:
+
 * Notes                                                      :noexport:notes:
 [[https://en.wikipedia.org/wiki/W._Ross_Ashby][Ross Ashby]];
 Ross Ashby [[http://www.rossashby.info/][archive]];
