--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -17,7 +17,7 @@ tags: [overview]
 #+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
 * ACTIVE Intro
-SCHEDULED: <2022-02-17 Thu>
+SCHEDULED: <2022-02-24 Thu>
 
 All right, so in this video, I'm gonna summarise some of the insights
 from this book, The Millionaire Fastlane.  I thought that this was
@@ -33,7 +33,7 @@ also, the five commandments of building a business that MJ DeMarco
 talks about.  How to get rich quick.
 
 * ACTIVE Avoid the slow lane
-SCHEDULED: <2022-02-17 Thu>
+SCHEDULED: <2022-02-24 Thu>
 
 Now, the first important lesson in the book is that we want to avoid
 the slow lane.  And the point that our friend, MJ, makes in the book,
@@ -125,8 +125,8 @@ thinking a few weeks.  That is not a thing.  What he's arguing for is
 a process that will take probably around 10 years to get rich quick.
 And that is actually quick, in his book.
 
-* ACTIVE Work the process
-SCHEDULED: <2022-02-16 Wed>
+* MAYBE Work the process
+SCHEDULED: <2022-02-24 Thu>
 
 And that brings us on to lesson number two, which is to work the
 process.  Now in the book, he talks a lot about how wealth is not an
