--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -274,6 +274,9 @@ that.
 
 *  Switch from being a consumer to a producer
 
+* RAW Switch from being a consumer to a producer
+SCHEDULED: <2022-02-22 Tue>
+
 And one of the ways that you can is lesson number four, which is
 switch from being a consumer to being a producer.  Now from a young
 age, society broadly teaches us that we should be consumers.  And we
