Further text elaboration

--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -166,113 +166,81 @@ building this money tree where the amount of wealth we can generate is
 not directly tied to the amount of time that we're putting into it.
 This brings us onto the next question, which is how do we actually
 build a money tree?  And he talks about, there's like four or five
-different types of money trees that we could potentially build.  The
-first one is that we could build a rental system.  And a rental system
-is basically anything that involves renting out something that you
-already own.  So if you have a bunch of real estate properties, and
-you rent them out, that is a rental system.  The problem is it's very
-hard to get to the point where you have a bunch of properties to rent
-out, 'cause you're already probably rich at that point.  The other way
-of building a rental system is by licencing.  For example, if you're a
-musician and you want to licence your audio that other people can use.
-In a way, they're paying you rent for this thing that you own.
+different types of money trees that we could potentially build.
+
+The first one is that we could build a rental system.  And a rental
+system is basically anything that involves renting out something that
+you already own.  So if you have a bunch of real estate properties,
+and you rent them out, that is a rental system.  The problem is it's
+very hard to get to the point where you have a bunch of properties to
+rent out, 'cause you're already probably rich at that point.  The
+other way of building a rental system is by licencing.  For example,
+if you're a musician and you want to licence your audio that other
+people can use.  In a way, they're paying you rent for this thing that
+you own.
+
 Secondly, what you could do is you could build a distribution system.
 Now this is basically a system that connects people who want something
 with the people who are supplying that thing.  So for example, Amazon
 is a distribution system.  It connects buyers with sellers and Amazon
 is the middleman.  And therefore, if you build the middleman, if you
 build a distribution system, you can get really, really, really,
-really rich.  Now interestingly, one really great distribution system
-is a company like AppSumo, who are completely coincidentally
-sponsoring this video.  AppSumo is run by my friend, Noah Kagan.  It's
-ridiculously great company, and what they do is that they give you the
-best deals in software.  Their model connects people who want
-software, people like me and you probably.  If you're watching this,
-you're interested in software just as much as I am with the people
-that want to sell software that have software that they want to sell.
-And they give you that software in a way that's either free or just,
-like, amazingly well-priced.  Every week, there's new deals added to
-the website.  And it's not just software, it's also online courses,
-It's also education.  And so if you want to learn anything in this
-how-to-build-a-business sphere, AppSumo probably has it covered.  And
-the whole vibe of AppSumo is that it's very like indie hackers,
-start-upy kind of vibes.  They do have a couple of tools that are
-suited for enterprises.  Mostly it's aimed at individuals and small
-businesses, which is probably the type of business you want to make if
-you want to get rich quick using The Millionaire Fastlane.  And I'm
-even recording this to you from the future to tell you all about their
-Black Friday giveaway.  So last year on Black Friday, they gave away a
-Tesla, which was pretty cool.  But this year, they're giving away a
-million dollars worth of stuff to entrepreneurs, not who buy their
-product, but who list their own product on the AppSumo marketplace.
-So if you have a product that you want to sell on the AppSumo
-marketplace and you list it somewhere between now and November 17th,
-2021, then the first 400 people, just to list a product, will get
-$1,000 of free money from the AppSumo team.  And the next 2,000 people
-to list a product are gonna get $250 completely for free.  You don't
-even have to make any sales of your product.  You will just get that
-free money in return for just listing your product on the marketplace.
-That's pretty cool.  And then everyone who enters of those 10 people
-will be lucky dipped to get $10,000, which is also pretty sick.  So if
-you've got any kind of digital product and you want to stick it on
-AppSumo, you can check out the marketplace to see what things you want
-to buy because they're all discounted.  But you can also sell your
-thing on AppSumo and it's pretty easy.  You just submit your product,
-you go live with it, and then you get paid.  So again, if you list
-your product on AppSumo marketplace up until November the 17th, 2021,
-then you can grab your share of the $1 million giveaway fund.  And you
-might be one of 10 people lucky enough to win a check for $10,000.  If
-that's up on your street, hit the link in the video description, you
-can check out all the products.  And you can potentially sell your own
-things.  So thank you, AppSumo, for sponsoring this video.  All right,
-thirdly, when it comes to building a money tree, we have a software
-system, But it is five o'clock and I have a Zoom call to attend.  So I
-will be right back. (claps hands) All right, we're back.  We've got a
-slight change to the lighting, but the third type of system that you
-can make to make this money tree.  I'm so glad. I'm so glad that
-worked.  I really hope this is gonna work in the edit.  Anyway, the
-third type of money tree we want to create is a software system.  Now,
-that's pretty standard.  You make the software once and then you can
-charge people for the software or for the digital product.  And then
-you can make money multiple times because the cost of distribution and
-the cost of replication is effectively zero.  I've made a bunch of
-software products in my time when I was in med school.  I built
-something called BMAT and UCAT Ninja, which was like a software
-platform that helped people get into med school by helping them
-prepare for the med school admissions exams.  One of my YouTuber
-friends, Oliur, managed to make $9,000 in a single week by selling
-icons that he designed.  So that's a digital asset.  He puts the work
-into creating it once and it's sort of like a software system whereby
-other people can just buy the thing because it is, ultimately,
-software.  And the fourth system that our friend, MJ, talks about is
-my favourite kind.  And that is the content money tree, the content
-system, where basically the idea is you create content.  So if you
-write a book, or make a YouTube video, or write a blog post, or make
-an online course that you can sell, ultimately, this is all content.
-It takes an investment of time and effort to write the book or create
-the content once.  But then you can sell it to multiple people further
-down the line.  And similar to the digital stuff, it has basically
-zero cost of replication and distribution, assuming it's on the
-internet.  And if it's a book, well then, there are some costs
-associated with it.  But it's still broadly a way of making money
-that's not tied to your own time.  For example, like two years ago
-now, a year ago, or something, I made a Skillshare class about how to
-study for exams.  And that class brings in about $10,000 every single
-month in pure passive income.  And I don't do it- I basically do
-nothing to promote it.  By the way, if you have exams coming up, check
-out my Skillshare class.  It'll be linked for free in the video
-description if you want to check it out.  But it's amazing how you can
-just do the work to make something once.  Although, in fairness, I was
-creating study-themed content on YouTube for two years before I made
-that class.  So again, it wasn't a get-rich-quick scheme.  It wasn't a
-get-rich-easy scheme.  But it was like a money tree that built up over
-time and has now helped pay the mortgage on my house.  So we've talked
-about the four different types of money tree, but what MJ says in the
-book is that, and what's obviously true, is that it's not that easy to
-build one of these.  You don't just magically have the ability to do
-that.
+really rich.
 
-*  Switch from being a consumer to a producer
+All right, thirdly, when it comes to building a money tree, we have a
+software system, But it is five o'clock and I have a Zoom call to
+attend.  So I will be right back. (claps hands) All right, we're back.
+We've got a slight change to the lighting, but the third type of
+system that you can make to make this money tree.  I'm so glad. I'm so
+glad that worked.  I really hope this is gonna work in the edit.
+Anyway, the third type of money tree we want to create is a software
+system.  Now, that's pretty standard.  You make the software once and
+then you can charge people for the software or for the digital
+product.  And then you can make money multiple times because the cost
+of distribution and the cost of replication is effectively zero.  I've
+made a bunch of software products in my time when I was in med school.
+I built something called BMAT and UCAT Ninja, which was like a
+software platform that helped people get into med school by helping
+them prepare for the med school admissions exams.
+
+One of my YouTuber friends, Oliur, managed to make $9,000 in a single
+week by selling icons that he designed.  So that's a digital asset.
+He puts the work into creating it once and it's sort of like a
+software system whereby other people can just buy the thing because it
+is, ultimately, software.
+
+And the fourth system that our friend, MJ, talks about is my favourite
+kind.  And that is the content money tree, the content system, where
+basically the idea is you create content.  So if you write a book, or
+make a YouTube video, or write a blog post, or make an online course
+that you can sell, ultimately, this is all content.  It takes an
+investment of time and effort to write the book or create the content
+once.  But then you can sell it to multiple people further down the
+line.  And similar to the digital stuff, it has basically zero cost of
+replication and distribution, assuming it's on the internet.  And if
+it's a book, well then, there are some costs associated with it.  But
+it's still broadly a way of making money that's not tied to your own
+time.
+
+For example, like two years ago now, a year ago, or something,
+I made a Skillshare class about how to study for exams.  And that
+class brings in about $10,000 every single month in pure passive
+income.  And I don't do it- I basically do nothing to promote it.  By
+the way, if you have exams coming up, check out my Skillshare class.
+It'll be linked for free in the video description if you want to check
+it out.  But it's amazing how you can just do the work to make
+something once.
+
+Although, in fairness, I was creating study-themed content on YouTube
+for two years before I made that class.  So again, it wasn't a
+get-rich-quick scheme.  It wasn't a get-rich-easy scheme.  But it was
+like a money tree that built up over time and has now helped pay the
+mortgage on my house.
+
+So we've talked about the four different types of money tree, but what
+MJ says in the book is that, and what's obviously true, is that it's
+not that easy to build one of these.  You don't just magically have
+the ability to do that.
 
 * RAW Switch from being a consumer to a producer
 SCHEDULED: <2022-02-22 Tue>
