--- a/2022-02-18-be-confident.org
+++ b/2022-02-18-be-confident.org
@@ -13,7 +13,7 @@ tags: [confidence]
 #+OPTIONS: tags:nil num:nil todo:nil pri:nil \n:nil @:t ::t |:t ^:{} _:{} *:t
 #+TOC: headlines 2
 #+PROPERTY:header-args :results output :exports both :eval no-export
-#+CATEGORY: Health
+#+CATEGORY: Confidence
 #+TODO: RAW INIT TODO ACTIVE | MAYBE DONE CLOSED
 
 [[https://www.youtube.com/watch?v=I5hTDOckpnU][Source]]
