--- a/2022-02-18-be-confident.org
+++ b/2022-02-18-be-confident.org
@@ -19,12 +19,314 @@ tags: [confidence]
 [[https://www.youtube.com/watch?v=I5hTDOckpnU][Source]]
 
 * Intro
+
+Hey friends welcome back to the channel in this video, we're talking
+about one of my favorite topics that I get asked about all the time
+which is confidence.  People DM me on Instagram and Twitter and stuff
+and say, hey, how are you so confident?  How are you so okay with
+putting yourself out there?  How did you become that way?  Were you
+always like that?  And it's weird because when I was younger I was
+pretty shy and unconfident generally across the board especially when
+it came to things like public speaking.  And I'd never once thought
+that I'd be comfortable enough to do something like make YouTube
+videos, ar that kind of jazz.  But for me, this whole confidence thing
+was very much a skill that I knew I wanted to improve and I took
+active steps to try and get better at being confident to the point
+where I think I am now reasonably okay at being confident.  So in this
+video, I'm gonna share the nine or so tips that I've learned over the
+last 15 years of like actively trying to become more confident let's
+go for it.
+
 * Appreciate the value of confidence
+
+All right, so tip number one is to appreciate the value of confidence.
+And I realized this fairly early on in my secondary school days when I
+was a wee teenager, trying to learn how to code and play "World of
+Warcraft" and that kind of stuff.  And I recognize that I at the time
+wasn't a particularly confident person and I knew in the back of my
+mind that this was gonna hold me back in life.  I saw other kids in my
+class who were more confident who were able to sort of be comfortable
+in social situations, who are able to have banter with the teachers.
+I kind of looked at them I was like, damn do you know I would love to
+have that kind of skill because I saw that it would just make my life
+a lot better if I were more confident if I could make friends easier
+or if I could, I don't know I wasn't really thinking about business
+opportunities and stuff.  I was thinking if I could pitch my web
+design services to people and make money, if I was more confident that
+would mean I have more money and I can buy more gadgets.  And it was
+this thing of realizing that the more confident you are the more
+confident we can become the more opportunities are gonna come always.
+So that's tip number one for actually going on this path towards
+becoming more confident tip.
+
 * Confidence is domain specific
+
+Number two that I found helpful was to recognize that confidence is in
+some ways domain specific, but in other ways it's domain general.  So
+like domain specific confidence is like when I was 13, 14 I was very
+confident when I was playing PlayStation with my friends, we'd play
+"Ratchet and Clank" I was pretty good at it.  I'd be flaming them.
+You know, I had a lot of confidence.  I was pretty confident in math
+class because I knew that I knew what was going on and I knew I could
+get the questions right in a math test.  But when it came to more
+social domains like giving a presentation in class or talking to new
+people and stuff I was less confident about that.  And over time, I
+kind of recognized that the feeling of confidence I had from doing
+something I was good at, I actually could just sort of apply that to
+whatever domain I wanted to and just try my best to feel that feeling
+even though I wasn't feeling the feeling if that makes sense.  And so
+these days for me is pretty good because I can turn on my YouTube
+persona if I need to.  And so if I'm in a situation where I'm feeling
+particularly unconfident I'll just flip that switch in my head and
+think, okay let's pretend I'm doing a YouTube video and then I will
+kind of sort of embody a little bit more of that confidence and
+charisma that hopefully theoretically fingers crossed comes across on
+camera.
+
 * Fake it until you make it
+
+Tip number three, that I found helpful was a mindset shift.
+And, there's this cliche that when it comes to confidence you wanna
+fake it until you make it.  This is actually like genuinely good
+advice I'd heard this advice for ages and I didn't find it
+particularly helpful but the thing like I read this quote in a book I
+can't remember which book it was but it basically said there is no
+difference to the observer between real confidence and fake
+confidence.  Like for the most part when we're speaking to someone we
+cannot tell whether they're actually confident or whether they're just
+pretending to be confident, real confidence and fake confidence looks
+pretty much identical.  Yes, caveat.  There are some issues with
+someone has a lot of bravado you can kind of tell, oh, this person's
+clearly faking it but in general 99.9% of the people that we meet we
+cannot tell the difference between real confidence and fake confidence
+and therefore recognizing that we can apply it to ourselves.  And so
+when I'm in situations where I am not feeling confident, I kind of
+tell myself, okay there's no difference between me pretending or
+acting as if I am confident and actually being confident therefore, I
+will choose to act as if I'm being confident.  I will fake it until I
+make it.  I kind of realized that like fake it till you make it kind
+of implies that you're pretending up until the point that you're not
+pretending anymore.  I think in a lot of situations we're all
+pretending more than we're letting on.  Even when it comes to making a
+YouTube video or giving a presentation or public speaking and stuff
+even though I consider myself quite good at that stuff I still am
+pretending to a degree.  I am playing a part I'm acting a persona this
+is not my real life persona that I would be with friends, with friends
+I'm a lot more low key and kind of talk like this and that's not very
+engaging when it comes to a public speaker.  So yeah, this mindset
+shift of fake it till you make it is genuinely really helpful but that
+plus the thing of there is no difference between real confidence and
+fake confidence.
+
 * Take baby steps
+
+All right, so tip number four is to take baby steps.  Now, the thing
+about confidence is that usually when we think like, oh I'm not very
+confident, like these days with my part-time YouTube Academy around
+half the students we have who wanna start making YouTube videos are
+uncomfortable with the idea of putting themselves out there on the
+internet talking to a camera in this kind of way.  And that makes
+perfect sense it is a very weird thing to do it takes a lot of
+practice to get to a point where you're comfortable talking to a
+camera and just loving the sound of your own voice.  And the thing
+that we tell the students who are struggling is to take really small
+baby steps.  So filming a video with lights, camera, microphone, and
+everything is quite intimidating, but for example, if you took out
+your phone and you sent a WhatsApp video to a friend that's not
+particularly intimidating.  If you post an Instagram story that feels
+a lot less intimidating for some people if you just kind of record a
+video and DM it to someone that's quite easy to do so that's a very
+small baby step.  Then the next step beyond that is to film a video
+with your phone and to upload it to YouTube on your YouTube channel
+but make it unlisted.  So no one's gonna see it other than you and
+your friends then you send the link out to some friends.  And you're
+like, okay, that wasn't too bad I upload it as unlisted.  And then the
+final step is to get your phone out to film a video and just hit the
+publish button because you realized that, well, I mean I've already
+done the WhatsApp video I've done the unlisted.  It's actually not
+that hard now to press publish and basically everyone in my course all
+of my students who have done that have found oh yeah, the fear about
+this thing publishing a YouTube video was so much in my head and now
+that I've done it I've realized it actually wasn't too bad.  And then
+they're on well on their path to becoming decent part-time YouTubers.
+It's a similar thing with Neil Strauss's book "Rules of the Game" for
+example, which is a book that sort of like an action plan to help guys
+who are uncomfortable talking to girls become more comfortable with
+talking to girls also I've heard.  And in that book there's this whole
+30 day plan where a day one you're literally just gonna go up to
+someone and ask them for the time.  Don't have to be a girl, just like
+anyone just ask for the time.  And you just do this like five times.
+Day two, you go up to random people in the street and you ask for
+directions to the nearest coffee shop that kind of stuff.  Those are
+the baby steps that build up the confidence muscle of talking to
+strangers and then over time theoretically, you can get to a point
+where you're comfortable going up to anyone on the street and just
+having a bit of a casual chat with them this is something I aspire to
+at some point in my life.
+
 * Confidence is something that you can just have
+
+Tip number five is another mindset shift.  The thing with confidence
+is that like, yes there are some practical things that we can do but
+broadly it is about kind of hacking our brains into thinking about
+confidence in a different way.  And one alternative way of thinking
+about confidence is that confidence is not something that you build
+and confidence is not something that you acquire.  Confidence is
+something that you can't just have.  This kind of sounds a bit weird,
+but I've been into close-up magic for the last 10 years or so and so
+I've attended a lot of lectures and performances by other magicians
+whose job it is to go around parties and tables and stage and stuff
+doing magic tricks.  That takes a hell of a lot of confidence.  And
+yeah one way to build that confidence is to do the baby steps and
+build the confidence very, very slowly over time.  But the other way
+of doing it which a few magicians talk about is just reorienting the
+concept of confidence in our mind and just recognizing that you can
+just be confident.  You can just choose to be confident and just play
+the part of someone who is confident.
+
 * Appreciate the spotlight effect
+
+That leads us to tip number six which is to appreciate the spotlight
+effect.  Now, the spotlight effect, I've talked about a few times on
+the channel is this idea that we all walk around life thinking that
+there is a spotlight trained on us and that anytime we make a mistake
+or a fall apart or we stumble over our words, we do anything silly.
+Loads of people around us are watching us and judging us.  And for
+people who really have the spotlight effect that leads to a feeling of
+unconfidence because confidence generally comes from a sense of
+comfort within ourselves a sense of being okay with taking risks and
+maybe even looking like a fool.  But if we walk around life thinking
+that everyone around us is judging us that's gonna be really, really
+bad for our confidence.  Now when it comes to the spotlight effect the
+sort of two things to keep in mind, number one is to recognize that
+broadly no one really cares.  Everyone is walking around with their
+own spotlight train on them and everyone is worrying about what
+everyone else is thinking therefore, very few people are actually
+looking at us and analyzing our actions and being like, Oh, ha ha,
+that person's not very confident that's point number one.  And point
+number two is that if you are the sort of person who goes around
+judging people, stop doing that.  It's a total waste of time.  Like
+most people are not doing that and if you're walking around being
+like, oh, what's he wearing?  Oh, what are those shoes that she's
+wearing?  Oh, that guy's hair looks a bit weird.  You're very, very
+unlikely to be a confident person because you are literally doing the
+thing that you're scared of and you're not recognizing that like 95%
+of people don't think in those ways.  So walking around life with a
+judgmental attitude towards other people it's just a terrible,
+terrible, terrible way to live.  So please stop doing that.  And I
+guarantee you will naturally become more confident as you realize that
+broadly no one actually cares about you therefore you don't really
+need to care or judge what other people are doing.
+
 * Everyone is friendly but you have to go first
+
+Tip number seven is one that I tell myself all the time which is that
+everyone is friendly but you have to go first.  And usually when I'm
+in any kind of social situation I tell myself, I need to make the
+first move.  If I'm at work and there's like a new doctor that I'm
+working with I tell myself that, okay I need to make the first move
+and say hello or like ask a question or like do a bit of banter or
+talk about their love life or anything like that.  And in like 99.9%
+of cases, I get a positive response because generally people are
+friendly.  It's just that everyone is scared of going first.  And so
+if you can be the person to go first and just tell yourself that I'm
+just gonna go first, if you can like take that baby step of putting
+yourself up there just a little bit it really results in a positive
+response for most people.  And for me the more I've done this more
+I've realized, I'm actually a pretty confident guy I just have to take
+that first step of going first.  It's like a lot of things in life
+where getting started is the hard part but once you're doing it's
+actually quite nice.  And for most of us watching this once you're in
+a conversation with someone it's probably pretty reasonable but it's
+just getting into that conversation that feels a little bit like, oh,
+I don't know if I should push the boat out, I don't know if I should
+like say hello to that person who's sitting on the plane next to me
+that kind of stuff.  It's just pushing through that starting point and
+recognizing that starting is hard but then continuing is easy everyone
+is friendly but you have to go for it.
+
 * Just practice
+
+Tip number eight for becoming more confident is to just practice
+confidence like anything is a skill, like a skill, it can be improved.
+And the more we put ourselves into uncomfortable situations situations
+where we're stretching our comfort zone the more generally we're gonna
+become confident because we realize we can thrive in those settings as
+well.  So for me they were kind of three things that I actively did to
+help improve my confidence.  Number one was that when I was in school
+and recognized that I needed to become more confident any time we'd
+have a class or a lecture or presentation or anything I would make it
+a point to ask a question at the end.  So throughout the whole thing,
+I'd be like dreading like oh my God, I need to ask the question what
+is that question gonna be?  And then I put my hand up and I would ask
+a question.  And then over time it just became so normal to the point
+where I now have zero qualms about asking a question, even in a
+lecture theater of like 400 medical students.  Secondly, confidence
+was part of the reason that I started dabbling in close up magic.
+Being a magician is quite a scary thing you have to go up to people
+and say, hey you wanna see a magic trick and you have to hope that you
+can perform and that you can be entertaining and that you can be
+confident.  And so I was doing shows at like hospices, and restaurants
+and later at (indistinct) parties at university.  And all of these
+were stretching my comfort zone a little bit.  And now I know that if
+I've got a deck of cards in my hand I'm pretty comfortable going up to
+a group of people and being like, hey, hi, you know, just kind of
+talking to them maybe showing a magic trick.  It still feels a little
+bit scary but the fact that I was putting myself into those
+uncomfortable situations really helped get my own confidence up.  And
+thirdly, when I started university I made a point that all right, you
+know, Ali, I'm not gonna be the shy unconfident dude that was in
+school I'm gonna be a legend, I'm gonna be super charismatic.  And so
+I made it a point that anytime I'd sit next to someone in a lecture at
+university I would say hi, I don't think we've met yet my name's Ali
+and the kind of offer shake their hand.  And that worked really well I
+met lots of people that way of being that hi, I don't think we've met
+yet my name is Ali.  How's it going?  That kind of vibe.  It's sort of
+just realizing that it's actually quite easy to do that and everyone
+kind of wants to make friends.  And the more I did this, the more I
+realized, oh, maybe I am a kind of a confident guy and maybe this
+thing of oh, Ali, you're shy and unconfident.  It was just a story
+that I was telling myself that might not necessarily be true anymore.
+
 * Confidence can be learned
+
+And finally tip number nine is above all recognizing that confidence
+is a skill and it's a skill that can and should be learned.  And so if
+you want to improve your confidence like I did I think honestly,
+there's loads of YouTube videos these days like the channel "Charisma
+on Command" is really good YouTube channel they've got a great book as
+well which is one of the first things that I read when I came to
+improve my own confidence.  But there was another book that I read
+which I still read like maybe once every two years or so, which is a
+really, really popular book on the subject and that's called "How to
+Win Friends and Influence People" So if you're interested in improving
+your own confidence I'd really recommend giving that a read or a
+listened to.  And if you wanna listen to it, you can do it on audible
+by kindly sponsoring this video as you guys probably know I freaking
+love audible.  I listen to audible all the time I listened to audible
+for like between one and three hours every single day.  And these days
+I listen to a mixture of fiction and nonfiction books.  So the fiction
+books that I love in audible are fantasy books like Brandon
+Sanderson's "Mistborn Saga" If you haven't checked it out you
+definitely should.  And in terms of non-fiction books, "How to Win
+Friends and Influence People" is genuinely really, really good.  and
+it's a very inspiring listen.  Anytime I listened to it I think, oh
+yeah, and I feel this renewed sense of confidence.  Yeah, you know I
+can be a confident kind of person.  If you haven't tried audible by
+now you're seriously missing out head over to audible.com/aliabdaal
+and you will get a 30 day free trial with a free audio book of your
+choice.  If you're interested in being more confident I'd recommend
+"How to Win Friends and Influence People" Or alternatively, if you're
+interested in just like a fantastic, fantastic fantasy series you will
+absolutely love the "Mistborn" series by Brandon Sanderson.  Another
+huge recommendation of mine on audible.  So head over to
+audible.com/aliabdaal or if you're in the U.S text aliabdaal to
+500-500 and you will get your free 30 day trial audible with a free
+audio book.  And if you've gotten to the end of this video and you're
+interested in more tips on becoming confident you should check out
+this video over here which is my top 10 tips for aspiring YouTubers.
+A lot of that stuff is relevant even if you don't actually want to be
+a YouTuber but a lot of the fear of starting YouTube is around
+confidence.  So you'll find some really interesting tips there
+hopefully.  Thank you so much for watching and I'll see you in the
+next video.  Bye bye.
