--- a/2022-02-18-be-confident.org
+++ b/2022-02-18-be-confident.org
@@ -18,7 +18,8 @@ tags: [confidence]
 
 [[https://www.youtube.com/watch?v=I5hTDOckpnU][Source]]
 
-* Intro
+* RAW Intro
+SCHEDULED: <2022-02-28 Mon>
 
 Hey friends welcome back to the channel in this video, we're talking
 about one of my favorite topics that I get asked about all the time
@@ -37,7 +38,8 @@ video, I'm gonna share the nine or so tips that I've learned over the
 last 15 years of like actively trying to become more confident let's
 go for it.
 
-* Appreciate the value of confidence
+* RAW Appreciate the value of confidence
+SCHEDULED: <2022-02-28 Mon>
 
 All right, so tip number one is to appreciate the value of confidence.
 And I realized this fairly early on in my secondary school days when I
@@ -59,7 +61,8 @@ confident we can become the more opportunities are gonna come always.
 So that's tip number one for actually going on this path towards
 becoming more confident tip.
 
-* Confidence is domain specific
+* RAW Confidence is domain specific
+SCHEDULED: <2022-03-01 Tue>
 
 Number two that I found helpful was to recognize that confidence is in
 some ways domain specific, but in other ways it's domain general.  So
@@ -83,7 +86,8 @@ kind of sort of embody a little bit more of that confidence and
 charisma that hopefully theoretically fingers crossed comes across on
 camera.
 
-* Fake it until you make it
+* RAW Fake it until you make it
+SCHEDULED: <2022-03-01 Tue>
 
 Tip number three, that I found helpful was a mindset shift.
 And, there's this cliche that when it comes to confidence you wanna
