--- a/2022-02-11-making-money.org
+++ b/2022-02-11-making-money.org
@@ -151,7 +151,7 @@ the overnight success.
 * TODO Build money trees
 SCHEDULED: <2022-02-23 Wed>
 :LOGBOOK:
-CLOCK: [2022-02-21 Mon 10:06]
+CLOCK: [2022-02-21 Mon 10:06]--[2022-02-21 Mon 10:31] =>  0:25
 :END:
 
 All right, so lesson number three is to build money trees.  Now we've
